1.7.0 /
[Alexandr Topilski]
- Multi selection in explorer tree

1.6.1 / August 5, 2017
[Alexandr Topilski]
- Https server for fastonosql.com
- External libs info

1.6.0 / Jule 31, 2017
[Alexandr Topilski]
- [Memcached, SSDB] Can't save connection setting for memcached. #31
- [Redis] Added BITFIELD command
- [LevelDB] Update sources to version 1.20
- [LMDB] Update sources to version 0.9.70
- [RocksDB] Update sources to version 5.7.0
- [SSDB] Update sources to version 1.9.4
- [UpscaleDB] Update sources to version 2.2.1
- Snappy view
- ForestDB support
- #26 Different JsonFormat for better readable json
- #68 Don't show "Check version" modal on every start
- #71 Bug: Crashes on windows if key doesn't exist
- Update QScintilla to version 2.10.1
- Update libssh2 sources to version 1.8.1 dev

1.5.1 / May 18, 2017
[Alexandr Topilski]
- Bug fixes

1.5.0 / Fabruary 2, 2017
[Alexandr Topilski]
- [Redis] Pub/Sub dialog
- [Redis] DECR UI handling
- [Redis] DECRBY UI handling
- [Memcached] INCR UI handling
- [Memcached] DECR UI handling
- [Memcached] Append UI handling
- [Memcached] Prepend UI handling
- [Memcached] Replace UI handling
- [Memcached] Add UI handling
- Fix text editor value change

1.4.1 / January 12, 2017
[Alexandr Topilski]
- #19 failled to load xcb plugin

1.4.0 / December 30, 2016 
[Alexandr Topilski]
- Font size preference

1.3.0 / December 17, 2016
[Alexandr Topilski]
- Ui bug fixes
- Validate input
- [Redis] LPUSH UI handling
- [Redis] SADD UI handling
- [Redis] ZADD UI handling
- [Redis] HMSET UI handling
- [Redis] INCR UI handling
- [Redis] INCRBY UI handling
- [Redis] INCRBYFLOAT UI handling
- [Redis] INCRBYFLOAT UI handling
- [Redis] ZETEX UI handling
- [Redis] ZETNX UI handling

1.2.0 / December 3, 2016
[Alexandr Topilski]
- Help command
- Common api for databases
- Update libssh2 sources to version 1.8.0
- [Redis] Load Databases - Amazon Elastic Cache - Redis #65
- [Redis] TTL loop
- [Memcached] TTL loop
- [SSDB] expire, ttl commands