@@ -30,6 +30,7 @@ const QString trCaption = QObject::tr("Select Database path");
 const QString trFilter = QObject::tr("Database files (*.*)");
 const QString trCreateDBIfMissing = QObject::tr("Create database");
 const QString trReadOnlyDB = QObject::tr("Read only database");
+const QString trComparator = QObject::tr("Comparator:");
 }  // namespace
 
 namespace fastonosql {
