@@ -1,6 +1,8 @@
 1.7.0 /
 [Alexandr Topilski]
 - Multi selection in explorer tree
+- [RocksDB] Comparator option
+- [LevelDB] Comparator option
 
 1.6.1 / August 5, 2017
 [Alexandr Topilski]
